tests/miniJava/neg/004243_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { else public int [] java ( ) { return 0 ; } }
